Added hyperlinks and about me section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="logo">Paul Taylor</div>
         <ul>
           <li>
-            <a href="#">Projects</a>
+            <a href="#my-projects">Projects</a>
           </li>
           <li>
-            <a href="#">About Me</a>
+            <a href="#about">About Me</a>
           </li>
           <li>
             <a href="#">Contact</a>
@@ -28,11 +28,11 @@
     <main class="main">
       <div class="container">
         <div>
-          <pre class="code-text"><code>.Hi, {
+          <pre class="code-text"><code>.Hi  {
             I'm: Paul;
             I'm-A Software Dev: Student;
             Welcome-To: My Portfolio; 
-          }</code></pre>
+    }</code></pre>
         </div>
         <div>
           <img src="images\front page pic.jpeg" alt="sdfsdf" />
@@ -56,8 +56,8 @@
       </div>
     </section>
 
-    <section class="project-section">
-      <h2>My Projects</h2>
+    <section id="my-projects" class="project-section">
+      <h2 class="header-one">My Projects</h2>
       <div class="projects">
         <div>
           <h3>Refactored Horiseon Website</h3>
@@ -67,10 +67,17 @@
           <h3>Placeholder</h3>
           <a href="#"><img class="image-small" src="images\Website Picture.png" alt=""></a>
         </div>
-        <div>
-          <h3>Placeholder</h3>
-          <a href="#"><img class="image-small" src="images\Website Picture.png" alt=""></a>
-        </div>
+      </div>
+    </section>
+
+    <section id="about" class="about-me">
+      <h2 class="header-two">About Me</h2>
+      <div class="about-me-section">
+        <p>My name is Paul I live in st marys kansas and I am 26 years old. I have always been interested in becoming
+          a software engineer. asdfhajksdhfjsahjfd shdafjhsdhafjs sdfhajhjdhf s hsdjfshdfjksh 
+          shfsjdhfjkshdf shdjfhsjdfhs dshdjfhsdf jshjs dfhhjskfdahfd  asdjfhjsahfd sadjfhjkasdhfjhajkdsfhjaskdfh
+          shadfjhsdajkhfjhjashd f
+        </p>
       </div>
     </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
