--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   <body>
     <nav class="navbar">
       <div class="container">
-        <div class="logo">Paul Taylor</div>
+        <div class="logo">PAUL TAYLOR</div>
         <ul>
           <li>
-            <a href="#my-projects">Projects</a>
+            <a href="#my-projects">PROJECTS</a>
           </li>
           <li>
-            <a href="#about">About Me</a>
+            <a href="#about">ABOUT ME</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#contact-me">CONTACT</a>
           </li>
         </ul>
       </div>
     </nav>
+
+    <img class="png" src="images\pngegg.png" alt="Background image of geometric shapes">
 
     <main class="main">
       <div class="container">
@@ -35,7 +37,7 @@
     }</code></pre>
         </div>
         <div>
-          <img src="images\front page pic.jpeg" alt="sdfsdf" />
+          <img class="paul" src="images\Paul.jpg" alt="Picture of Paul Taylor" />
         </div>
 
         
@@ -45,10 +47,10 @@
     <section class="button-section">
       <div class="button-row">
         <div>
-          <button type="button" class="button-1"><a href="#"><ion-icon name="logo-github"></ion-icon></a></button>
+          <button type="button" class="button-1"><a href="https://github.com/Paultcodes?tab=repositories"><ion-icon name="logo-github"></ion-icon></a></button>
         </div>
         <div>
-          <button type="button" class="button-1"><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></button>
+          <button type="button" class="button-1"><a href="https://twitter.com/PaulTay99373282"><ion-icon name="logo-twitter"></ion-icon></a></button>
         </div>
         <div>
           <button type="button" class="button-1"><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></button>
@@ -57,29 +59,43 @@
     </section>
 
     <section id="my-projects" class="project-section">
-      <h2 class="header-one">My Projects</h2>
+      <h2 class="header-one">MY PROJECTS</h2>
       <div class="projects">
         <div>
-          <h3>Refactored Horiseon Website</h3>
-          <a href="#"><img class="image-big" src="images\Website Picture.png" alt=""></a>
+          <h3>REFACTORED HORIESON WEBSITE</h3>
+          <a href="https://paultcodes.github.io/First-Challenge-Refactoring/"><img class="image-big" src="images\Website Picture.png" alt="Picture of Horiseon Homepage"></a>
         </div>
         <div>
-          <h3>Placeholder</h3>
-          <a href="#"><img class="image-small" src="images\Website Picture.png" alt=""></a>
+          <h3>PLACEHOLDER</h3>
+          <a href="#"><img class="image-small" src="images\Code picture.jpeg" alt="Picture of code"></a>
         </div>
       </div>
     </section>
 
     <section id="about" class="about-me">
-      <h2 class="header-two">About Me</h2>
+      <h2 class="header-two">ABOUT ME</h2>
       <div class="about-me-section">
-        <p>My name is Paul I live in st marys kansas and I am 26 years old. I have always been interested in becoming
-          a software engineer. asdfhajksdhfjsahjfd shdafjhsdhafjs sdfhajhjdhf s hsdjfshdfjksh 
-          shfsjdhfjkshdf shdjfhsjdfhs dshdjfhsdf jshjs dfhhjskfdahfd  asdjfhjsahfd sadjfhjkasdhfjhajkdsfhjaskdfh
-          shadfjhsdajkhfjhjashd f
+        <p>
+          I'm Paul Taylor, I'm from a small town in central Kansas. After 10 years of various work experience, I am now pursuing my passion. 
+          Software Development has been a goal of mine for the past 5 years and now, after just a couple of weeks in class, I see my future. 
+          The marriage of logic, usability, and asthetics in a single role is very attractive to me. I hope this page and my projects reflect that 
+          passion. Please reach out with any comments or questions. Enjoy!
         </p>
       </div>
     </section>
+
+    <footer id="contact-me" class="footer-section">
+      <div class="contact">
+        <ul>
+          <div>
+            <li>Email: paultayloremail1995@gmail.com</li>
+          </div>
+          <div>
+            <li>Phone: 785-323-8863</li>
+          </div>
+        </ul>
+      </div>
+    </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
