Added some comments in CSS and updated some tags in HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <img class="png" src="images\pngegg.png" alt="Background image of geometric shapes">
 
-    <main class="main">
+    <header class="main">
       <div class="container">
         <div>
           <pre class="code-text"><code>.Hi  {
@@ -42,7 +42,8 @@
 
         
       
-    </main>
+      </header>
+      <main>
 
     <section class="button-section">
       <div class="button-row">
@@ -53,7 +54,7 @@
           <button type="button" class="button-1"><a href="https://twitter.com/PaulTay99373282"><ion-icon name="logo-twitter"></ion-icon></a></button>
         </div>
         <div>
-          <button type="button" class="button-1"><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></button>
+          <button type="button" class="button-1"><a href="https://www.instagram.com/paultcodes/"><ion-icon name="logo-instagram"></ion-icon></a></button>
         </div>
       </div>
     </section>
@@ -83,6 +84,7 @@
         </p>
       </div>
     </section>
+  </main>
 
     <footer id="contact-me" class="footer-section">
       <div class="contact">
