--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
           <h3>PLACEHOLDER</h3>
           <a href="#"><img class="image-small" src="images\Code picture.jpeg" alt="Picture of code"></a>
         </div>
+        <div>
+          <h3>CodeNet</h3>
+          <a href="#"><img class="image-small" src="./images/codnet.jpg" alt="Picture of codenet website"></a>
+        </div>
       </div>
     </section>
 
